--- a/PhotosReview/SearchReviewConditions.storyboard
+++ b/PhotosReview/SearchReviewConditions.storyboard
@@ -57,16 +57,19 @@
                                 </constraints>
                                 <items>
                                     <barButtonItem title="キャンセル" id="gPU-YZ-Gmd">
+                                        <color key="tintColor" red="0.75126201920000002" green="0.52182384150000005" blue="0.33952845450000002" alpha="1" colorSpace="calibratedRGB"/>
                                         <connections>
                                             <action selector="cancel:" destination="92E-ay-MoR" id="gn4-7V-7IN"/>
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem title="決定" id="sOw-3Z-oLv">
+                                        <color key="tintColor" red="0.75126201920000002" green="0.52182384150000005" blue="0.33952845450000002" alpha="1" colorSpace="calibratedRGB"/>
                                         <connections>
                                             <action selector="decide:" destination="92E-ay-MoR" id="vMs-Ci-0xW"/>
                                         </connections>
                                     </barButtonItem>
                                 </items>
+                                <color key="barTintColor" red="0.78250251010000005" green="0.87325721150000002" blue="0.69072587190000001" alpha="1" colorSpace="calibratedRGB"/>
                             </toolbar>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5rE-vE-6Gd" userLabel="BelowView">
                                 <rect key="frame" x="16" y="200" width="288" height="182"/>
@@ -135,7 +138,7 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="0.5794989224" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.75126201920000002" green="0.52182384150000005" blue="0.33952845450000002" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="SmX-YO-JKe" firstAttribute="leading" secondItem="kMO-ve-d0t" secondAttribute="leadingMargin" id="263-mp-3eX"/>
                             <constraint firstItem="E1K-oC-wej" firstAttribute="centerX" secondItem="SmX-YO-JKe" secondAttribute="centerX" id="4B2-V4-8JU"/>
