--- a/PhotosReview/ReviewDetail.storyboard
+++ b/PhotosReview/ReviewDetail.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="p5b-tf-tLp">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="p5b-tf-tLp">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -194,6 +194,14 @@
                             <constraint firstItem="eHd-i4-bf7" firstAttribute="leading" secondItem="TpI-BC-Mzh" secondAttribute="leading" id="w5U-jr-bVu"/>
                         </constraints>
                     </scrollView>
+                    <navigationItem key="navigationItem" id="c00-Ne-zGH">
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="delete" id="vvE-2h-UZ2">
+                            <color key="tintColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            <connections>
+                                <action selector="deleteReview:" destination="p5b-tf-tLp" id="vri-i6-ecT"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
@@ -202,6 +210,7 @@
                         <outlet property="categoryName" destination="vG8-mE-RVO" id="sDz-Aa-bzS"/>
                         <outlet property="comment" destination="KaY-j5-psA" id="rby-bd-cDa"/>
                         <outlet property="estimation" destination="4yc-Mi-v5H" id="mSO-r2-eRX"/>
+                        <outlet property="reviewDetailNavigation" destination="c00-Ne-zGH" id="1oa-8C-m5B"/>
                         <outlet property="reviewDetailPhotoImage" destination="Vzf-Ie-AJM" id="iFX-wc-IKJ"/>
                         <outlet property="reviewDetailScrollView" destination="TpI-BC-Mzh" id="xJJ-ez-KPk"/>
                         <outlet property="reviewDetailView" destination="eHd-i4-bf7" id="wlv-ud-30p"/>
@@ -472,5 +481,6 @@
     </scenes>
     <resources>
         <image name="Noimage.gif" width="260" height="195"/>
+        <image name="delete" width="30" height="30"/>
     </resources>
 </document>
